moved header-top, navbar and footer to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,10 @@
 </head>
 
 <body>
+    {% include header-top.html %}
+    {% include navbar.html %}
     {{ content }}
+    {% include footer.html %}
 </body>
 
 </html>
