declared url before baseurl.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <header>
     <div class="logo">
         <a href="index.html">
-            <img src="{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
+            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
         </a>
     </div>
     <div class="menumobileview">
@@ -11,7 +11,7 @@
     <div class="menu nav">
         <ul>
             <li>
-                <a href="{{ site.baseurl }}/gift.html">Gift Card</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/gift.html">Gift Card</a>
             </li>
             <li>
                 <a href="trainer.html">Trainer</a>
