--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="width-100">
     <div class="link-session relative">
-        <img src="{{ site.baseurl }}/assets/images/screen-bg-1.png" class="link-banner" width="100%" height="600px">
+        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/screen-bg-1.png" class="link-banner" width="100%" height="600px">
         <div class="contact-link">
             <h3>
                 Not just fit, UBQFIT.
@@ -21,11 +21,11 @@
             <div class="app-store">
                 <a href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank"
                     rel="noreferrer noopener">
-                    <img src="{{ site.baseurl }}/assets/images/apple.png">
+                    <img src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png">
                 </a>
                 <a href="https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US"
                     target="_blank" rel="noreferrer noopener">
-                    <img src="{{ site.baseurl }}/assets/images/googleplay.png">
+                    <img src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png">
                 </a>
             </div>
         </div>
