--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <title>UBQFIT</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" type="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/favicon.ico">
+<link rel="icon" type="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/assets/images/favicon.ico">
 <!-- Required meta tags -->
 <meta name=keywords
     content="{{ site.keywords }}">
