_includes code cleanup.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,8 @@
 <header>
     <div class="logo">
         <a href="index.html">
-            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px" height="35px">
+            <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px"
+                height="35px">
         </a>
     </div>
     <div class="menumobileview">
