--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <div class="width-100">
     <div class="link-session relative">
-        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/screen-bg-1.png" class="link-banner" width="100%" height="600px">
+        <img src="{{ site.url }}{{ site.baseurl }}/assets/images/screen-bg-1.png" class="link-banner" width="100%"
+            height="600px">
         <div class="contact-link">
             <h3>
                 Not just fit, UBQFIT.
@@ -8,38 +9,20 @@
             <p>
                 Download our mobile app and revolutionize your fitness experience.
             </p>
-            <!-- <div class="footer-form-wrapper form-field relative margin-bottom-20">
-                    <input id="homePhoneNumber" type="tel" [(ngModel)]="phoneNumber"
-                        (keyup)="phoneNumberChange('keyup');" placeholder="Phone number" class="form-control">
-                    <div class="error" *ngIf="saveFlag && phoneNumber && !isPhoneNumberValid">
-                        Phone Number Invalid
-                    </div>
-                    <button class="cmg-soon" (click)="phoneNumberChange('sentLink')">Send Link</button>
-
-                </div> -->
             <div id="textpuff-widget" class="relative margin-bottom-20"></div>
             <div class="app-store">
-                <a href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank"
-                    rel="noreferrer noopener">
+                <a href="https://apps.apple.com/us/app/ubqfit/id1441253233" target="_blank" rel="noreferrer noopener">
                     <img src="{{ site.url }}{{ site.baseurl }}/assets/images/apple.png">
                 </a>
-                <a href="https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US"
-                    target="_blank" rel="noreferrer noopener">
+                <a href="https://play.google.com/store/apps/details?id=com.ubqfitinc.ubqfit&hl=en_US" target="_blank"
+                    rel="noreferrer noopener">
                     <img src="{{ site.url }}{{ site.baseurl }}/assets/images/googleplay.png">
                 </a>
             </div>
         </div>
     </div>
-
     <footer>
         <ul>
-
-            <!-- <li>
-                    <a (click)="openZendesk()" href="javascript:void(0)">Start a live chat</a>
-                </li>
-                <li>
-                    <a (click)="openZendesk()" href="javascript:void(0)">Visit Support Center</a>
-                </li> -->
             <ul class="socail-icon">
                 <h4>
                     Our Social
@@ -52,16 +35,12 @@
                         rel="noreferrer">Instagram</a>
                 </li>
                 <li>
-                    <a class="twitter" href="https://twitter.com/ubqfit" target="_blank"
-                        rel="noreferrer">twitter</a>
+                    <a class="twitter" href="https://twitter.com/ubqfit" target="_blank" rel="noreferrer">twitter</a>
                 </li>
                 <li>
                     <a class="linkedin" href="https://www.linkedin.com/company/ubqfit/" target="_blank"
                         rel="noreferrer">linkedin</a>
                 </li>
-                <!-- <li>
-                              <a class="pintrest" href="javascript:void(0)">pintrest</a>
-                            </li> -->
             </ul>
         </ul>
         <ul>
@@ -96,15 +75,9 @@
             <li>
                 <a href="contactus.html">Contact Us</a>
             </li>
-            <!-- <li>
-                            <a (click)="openFaq()" href="javascript:void(0)">FAQs</a>
-                          </li> -->
             <li>
                 <a class="helpdesk" href="javascript:void(0)">Chat</a>
             </li>
-            <!-- <li>
-                            <a href="javascript:void(0)"><b>Phone</b>: +1 (866)-678-8888</a>
-                        </li> -->
         </ul>
     </footer>
     <div class="copy-right">
@@ -124,12 +97,5 @@
         </ul>
     </div>
     <div class="help-desk">
-        <!-- <a (click)="!isZenDeskOpend ? openZendesk() : closeZendesk()" class="support"
-                href="javascript:void(0)">Chat</a> -->
-        <!-- <a class="support"
-                href="javascript:void(0)">Chat -->
-
-        <!-- </a> -->
-
     </div>
 </div>
