Gift Page added.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <a href="index.html">
+        <a href="{{ site.url }}{{ site.baseurl }}/index.html">
             <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px"
                 height="35px">
         </a>
@@ -12,22 +12,22 @@
     <div class="menu nav">
         <ul>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/gift.html">Gift Card</a>
+                <a href="/gift/">Gift Card</a>
             </li>
             <li>
-                <a href="trainer.html">Trainer</a>
+                <a href="/trainer/">Trainer</a>
             </li>
             <li>
-                <a href="trainee.html">Trainee</a>
+                <a href="/trainee/">Trainee</a>
             </li>
             <li class="community">
                 <a class="community_menu dropdown-mobile" href="javascript:void(0)">Community</a>
                 <ul class="submenu">
                     <li>
-                        <a href="ourstory.html">Our Story</a>
+                        <a href="/ourstory/">Our Story</a>
                     </li>
                     <li>
-                        <a href="testimonials.html">
+                        <a href="/testimonials/">
                             Testimonials</a>
                     </li>
                     <li>
@@ -37,7 +37,7 @@
                 </ul>
             </li>
             <li>
-                <a href="pricing.html">Pricing</a>
+                <a href="/pricing/">Pricing</a>
             </li>
             <li class="login web-login">
                 <a href="javascript:void(0)">Log In</a>
