--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,22 +12,22 @@
     <div class="menu nav">
         <ul>
             <li>
-                <a href="/gift/">Gift Card</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/gift/">Gift Card</a>
             </li>
             <li>
-                <a href="/trainer/">Trainer</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/trainer/">Trainer</a>
             </li>
             <li>
-                <a href="/trainee/">Trainee</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/trainee/">Trainee</a>
             </li>
             <li class="community">
                 <a class="community_menu dropdown-mobile" href="javascript:void(0)">Community</a>
                 <ul class="submenu">
                     <li>
-                        <a href="/ourstory/">Our Story</a>
+                        <a href="{{ site.url }}{{ site.baseurl }}/ourstory/">Our Story</a>
                     </li>
                     <li>
-                        <a href="/testimonials/">
+                        <a href="{{ site.url }}{{ site.baseurl }}/testimonials/">
                             Testimonials</a>
                     </li>
                     <li>
@@ -37,7 +37,7 @@
                 </ul>
             </li>
             <li>
-                <a href="/pricing/">Pricing</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/pricing/">Pricing</a>
             </li>
             <li class="login web-login">
                 <a href="javascript:void(0)">Log In</a>
