Linked the pages with fat-footer.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -48,13 +48,13 @@
                 Join Us
             </h4>
             <li>
-                <a href="trainer.html">Trainers</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/trainer/">Trainers</a>
             </li>
             <li>
-                <a href="trainee.html">Trainees</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/trainee/">Trainees</a>
             </li>
             <li>
-                <a href="testimonials.html">Testimonials</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/testimonials/">Testimonials</a>
             </li>
         </ul>
         <ul>
@@ -62,10 +62,10 @@
                 About
             </h4>
             <li>
-                <a href="ourstory.html">Our Story</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/ourstory/">Our Story</a>
             </li>
             <li>
-                <a href="blog.html">Blog</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/blog/">Blog</a>
             </li>
         </ul>
         <ul>
@@ -73,7 +73,7 @@
                 Support
             </h4>
             <li>
-                <a href="contactus.html">Contact Us</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/contactus/">Contact Us</a>
             </li>
             <li>
                 <a class="helpdesk" href="javascript:void(0)">Chat</a>
