--- a/_includes/header-top.html
+++ b/_includes/header-top.html
@@ -1,10 +1,10 @@
 <div class="header-top smaller center">
     <p class="desktop-view-signup">
-        Get 95% off on a 1-on-1 Session. <a style="white-space: nowrap;" class="review_btn_prelaunch"
+        Get a 1-on-1 training session for ONLY $1. <a style="white-space: nowrap;" class="review_btn_prelaunch"
             href="javascript:void(0)"> Sign Up</a>
     </p>
     <p class="mobile-view-signup">
-        Get 95% off on a 1-on-1 Session. <a style="white-space: nowrap;" class="review_btn_prelaunchs"
+        Get a 1-on-1 training session for ONLY $1. <a style="white-space: nowrap;" class="review_btn_prelaunchs"
             href="javascript:void(0)" onclick="openAppView()"> Sign Up</a>
     </p>
 </div>
