--- a/_includes/header-top.html
+++ b/_includes/header-top.html
@@ -1,10 +1,10 @@
 <div class="header-top smaller center">
     <p class="desktop-view-signup">
-        Get a 1-on-1 training session for ONLY $1. <a style="white-space: nowrap;" class="review_btn_prelaunch"
-            href="javascript:void(0)"> Sign Up</a>
+        {{ site.data.announcementBar.announcementText }}<a style="white-space: nowrap;" class="review_btn_prelaunch"
+            href="javascript:void(0)"> {{ site.data.announcementBar.buttonText }} </a>
     </p>
     <p class="mobile-view-signup">
-        Get a 1-on-1 training session for ONLY $1. <a style="white-space: nowrap;" class="review_btn_prelaunchs"
-            href="javascript:void(0)" onclick="openAppView()"> Sign Up</a>
+        {{ site.data.announcementBar.announcementText }} <a style="white-space: nowrap;" class="review_btn_prelaunchs"
+            href="javascript:void(0)" onclick="openAppView()"> {{ site.data.announcementBar.buttonText }} </a>
     </p>
 </div>
