Privacy page added.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -86,13 +86,13 @@
                 © 2019 UBQFIT
             </p>
             <li>
-                <a href="privacy-policy.html">Privacy Policy</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/privacy-policy/">Privacy Policy</a>
             </li>
             <li>
-                <a href="terms-conditions.html">Terms & Conditions</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/terms-conditions/">Terms & Conditions</a>
             </li>
             <li>
-                <a href="dmca-policy.html">DMCA Policy</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/dmca-policy/">DMCA Policy</a>
             </li>
         </ul>
     </div>
