Blog Page introduced.

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -31,7 +31,7 @@
                             Testimonials</a>
                     </li>
                     <li>
-                        <a href="blog.html">
+                        <a href="{{ site.url }}{{ site.baseurl }}/blog/">
                             Blog</a>
                     </li>
                 </ul>
