--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,9 +59,9 @@
 <!-- Pintrest meta -->
 <meta name="p:domain_verify" content="ada36ea9b646725c3c922c8d964104bf" />
 <!-- CSS files -->
-<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/stylesheet.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/media.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/css/intlTelInput.min.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}assets/css/stylesheet.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}assets/css/media.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}assets/js/intl-tel-input/build/css/intlTelInput.min.css">
 
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
