removed / after baseurl

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,14 @@
 <meta charset="utf-8">
 <title>UBQFIT</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" type="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/assets/images/favicon.ico">
+<link rel="icon" type="image/x-icon" href="{{ site.url }}{{ site.baseurl }}assets/images/favicon.ico">
 <!-- Required meta tags -->
 <meta name=keywords
     content="{{ site.keywords }}">
 <meta name=description
     content="{{ site.description }}">
 <meta property=og:image title="{{ site.title }}" content=images/UBQFIT-Banner.png />
-<link rel=image_src title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}/assets/images/UBQFIT-Banner.png" />
+<link rel=image_src title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}assets/images/UBQFIT-Banner.png" />
 <meta name="author" content="{{ site.title }}">
 <meta name="robots" content="index, follow">
 <meta name="theme-color" content="#0e0e12" />
@@ -44,8 +44,8 @@
 <meta property="og:url" content="{{ site.url }}">
 <meta property="og:description"
     content="{{ site.description }}">
-<meta property="og:video" content="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" />
-<meta property="og:video:secure_url" content="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" />
+<meta property="og:video" content="{{ site.url }}{{ site.baseurl }}assets/images/video/hero_vid_landscape.mp4" />
+<meta property="og:video:secure_url" content="{{ site.url }}{{ site.baseurl }}assets/images/video/hero_vid_landscape.mp4" />
 <meta property="og:video:type" content="application/x-shockwave-flash" />
 <meta property="og:video:width" content="400" />
 <meta property="og:video:height" content="300" />
