--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,14 @@
 <meta charset="utf-8">
 <title>UBQFIT</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" type="image/x-icon" href="{{ site.url }}{{ site.baseurl }}assets/images/favicon.ico">
+<link rel="icon" type="image/x-icon" href="{{ site.url }}{{ site.baseurl }}/assets/images/favicon.ico">
 <!-- Required meta tags -->
 <meta name=keywords
     content="{{ site.keywords }}">
 <meta name=description
     content="{{ site.description }}">
 <meta property=og:image title="{{ site.title }}" content=images/UBQFIT-Banner.png />
-<link rel=image_src title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}assets/images/UBQFIT-Banner.png" />
+<link rel=image_src title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}/assets/images/UBQFIT-Banner.png" />
 <meta name="author" content="{{ site.title }}">
 <meta name="robots" content="index, follow">
 <meta name="theme-color" content="#0e0e12" />
@@ -44,8 +44,8 @@
 <meta property="og:url" content="{{ site.url }}">
 <meta property="og:description"
     content="{{ site.description }}">
-<meta property="og:video" content="{{ site.url }}{{ site.baseurl }}assets/images/video/hero_vid_landscape.mp4" />
-<meta property="og:video:secure_url" content="{{ site.url }}{{ site.baseurl }}assets/images/video/hero_vid_landscape.mp4" />
+<meta property="og:video" content="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" />
+<meta property="og:video:secure_url" content="{{ site.url }}{{ site.baseurl }}/assets/images/video/hero_vid_landscape.mp4" />
 <meta property="og:video:type" content="application/x-shockwave-flash" />
 <meta property="og:video:width" content="400" />
 <meta property="og:video:height" content="300" />
@@ -59,9 +59,9 @@
 <!-- Pintrest meta -->
 <meta name="p:domain_verify" content="ada36ea9b646725c3c922c8d964104bf" />
 <!-- CSS files -->
-<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}assets/css/stylesheet.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}assets/css/media.css">
-<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}assets/js/intl-tel-input/build/css/intlTelInput.min.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/stylesheet.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/css/media.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/css/intlTelInput.min.css">
 
 <!-- Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
