fixed download button images

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     content="{{ site.keywords }}">
 <meta name=description
     content="{{ site.description }}">
-<meta property=og:image title="{{ site.title }}" content=images/UBQFIT-Banner.png />
+<meta property=og:image title="{{ site.title }}" content="{{ site.url }}{{ site.baseurl }}/assetsimages/UBQFIT-Banner.png" />
 <link rel=image_src title="{{ site.title }}" href="{{ site.url }}{{ site.baseurl }}/assets/images/UBQFIT-Banner.png" />
 <meta name="author" content="{{ site.title }}">
 <meta name="robots" content="index, follow">
