--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
     {% include navbar.html %}
     {{ content }}
     {% include footer.html %}
+    {% include js-links.html %}
     {% include pre-launch-modal.html %}
 </body>
 
