hid instagram js

--- a/_includes/js-links.html
+++ b/_includes/js-links.html
@@ -23,8 +23,7 @@
 <!-- intel-input phone number validation -->
 <script src="{{ site.url }}{{ site.baseurl }}/assets/js/intl-tel-input/build/js/intlTelInput.js"></script>
 <!-- Start of ubqfit Zendesk Widget script -->
-<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=70d2f53e-c4b9-48da-bc27-e5646f666d9d">
-</script>
+<!-- <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=70d2f53e-c4b9-48da-bc27-e5646f666d9d"></script> -->
 
 <!-- End of ubqfit Zendesk Widget script -->
 <script src="{{ site.url }}{{ site.baseurl }}/assets/js/custom.js"></script>
