--- a/_includes/js-links.html
+++ b/_includes/js-links.html
@@ -7,7 +7,7 @@
 <!-- End of ubqfit Zendesk Widget script -->
 
 <script src="{{ site.url }}{{ site.baseurl }}/assets/js/custom.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/moment.js" defer></script>
+<script src="{{ site.url }}{{ site.baseurl }}/assets/js/moment.js"></script>
 <script src="{{ site.url }}{{ site.baseurl }}/assets/js/services.js"></script>
 <!-- <script src="{{ site.url }}{{ site.baseurl }}/assets/js/lightbox-1.0.0.min.js"></script> -->
 
