Changed everything to not use permalink pretty. Fixed broken links.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -47,13 +47,13 @@
                 Join Us
             </h4>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/trainer/">Trainers</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/trainer.html">Trainers</a>
             </li>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/trainee/">Trainees</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/trainee.html">Trainees</a>
             </li>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/testimonials/">Testimonials</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/testimonials.html">Testimonials</a>
             </li>
         </ul>
         <ul>
@@ -61,10 +61,10 @@
                 About
             </h4>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/ourstory/">Our Story</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/ourstory.html">Our Story</a>
             </li>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/blog/">Blog</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/blog.html">Blog</a>
             </li>
         </ul>
         <ul>
@@ -72,7 +72,7 @@
                 Support
             </h4>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/contactus/">Contact Us</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/contactus.html">Contact Us</a>
             </li>
             <li>
                 <a class="helpdesk" href="javascript:void(0)">Chat</a>
@@ -85,13 +85,13 @@
                 © 2020 UBQFIT
             </p>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/privacy-policy/">Privacy Policy</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/privacy-policy.html">Privacy Policy</a>
             </li>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/terms-conditions/">Terms & Conditions</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/terms-conditions.html">Terms & Conditions</a>
             </li>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/dmca-policy/">DMCA Policy</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/dmca-policy.html">DMCA Policy</a>
             </li>
         </ul>
     </div>
