--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo">
-        <a href="{{ site.url }}{{ site.baseurl }}/index.html">
+        <a href="{{ site.url }}{{ site.baseurl }}/">
             <img src="{{ site.url }}{{ site.baseurl }}/assets/images/logo.svg" title="Logo" alt="Logo" width="125px"
                 height="35px">
         </a>
@@ -12,32 +12,32 @@
     <div class="menu nav">
         <ul>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/gift/">Gift Card</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/gift.html">Gift Card</a>
             </li>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/trainer/">Trainer</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/trainer.html">Trainer</a>
             </li>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/trainee/">Trainee</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/trainee.html">Trainee</a>
             </li>
             <li class="community">
                 <a class="community_menu dropdown-mobile" href="javascript:void(0)">Community</a>
                 <ul class="submenu">
                     <li>
-                        <a href="{{ site.url }}{{ site.baseurl }}/ourstory/">Our Story</a>
+                        <a href="{{ site.url }}{{ site.baseurl }}/ourstory.html">Our Story</a>
                     </li>
                     <li>
-                        <a href="{{ site.url }}{{ site.baseurl }}/testimonials/">
+                        <a href="{{ site.url }}{{ site.baseurl }}/testimonials.html">
                             Testimonials</a>
                     </li>
                     <li>
-                        <a href="{{ site.url }}{{ site.baseurl }}/blog/">
+                        <a href="{{ site.url }}{{ site.baseurl }}/blog.html">
                             Blog</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="{{ site.url }}{{ site.baseurl }}/pricing/">Pricing</a>
+                <a href="{{ site.url }}{{ site.baseurl }}/pricing.html">Pricing</a>
             </li>
             <li class="login web-login">
                 <a href="javascript:void(0)">Log In</a>
