--- a/_includes/header-top.html
+++ b/_includes/header-top.html
@@ -1,3 +1,4 @@
+<div class="branch-journeys-top"></div>
 <div class="header-top smaller center">
     <p class="desktop-view-signup">
         {{ site.data.announcementBar.announcementText }}<a style="white-space: nowrap;" class="review_btn_prelaunch"
